Changes in 4.3.1:
- Fix new custom groups not appearing in add to group submenu (307230)
- Fix crash when right clicking on some locations in the GroupView due to 0 pointer (307160)

Changes in 4.3:
- Change default blocklist url to iblocklist.org (305109)

Changes in 4.3rc1:
- Add support for magnet links in the syndication plugin
- Add search line to download order dialog
- Add move top and bottom option to download order dialog (295341)
- Make sure that move up and move down in the download order dialog work with multiple items (295341)
- Also update file priorities when normal priority file completes downloading in download order plugin (296576)
- Add automatic sorting options to download order plugin (name, seasons and episodes, album track number) (295341)
- Make float comparison factor smaller in ViewModel when checking if share ratio has changed (297931)
- Show torrent count next to group in GroupView (176173)
- Add new GroupSwitcher widget
- Add edit group policy button to GroupSwitcher
- Remove html tooltips from ui files
- Tracker grouping script now uses the domain name of the tracker (227430)
- Catch SIGINT and SIGTERM and do a clean shutdown (296835)
- Add bytes left to download column in View (152070)
- Add new add trackers dialog with url completion (269563)
- Delete key now also works in the MagnetView (295173)
- Fix sorting of time left column (298542)
- Add support for removable storage (286120)
- Fix typos in several strings (300969, 300781, 300782)
- Fix suspended overlay not shown on tray icon when ktorrent is started up suspended (301042)
- Make sure default size of main window, tracker column in tracker view and filename column in file view are sensible (300057)
- Fix crash in syndication plugin (301117)
- Fix close search tab button not getting disabled when only one is left after closing another one (302896)
- Fix crash when looking up country for IP address (303340)